# XiaoHuiXiangQi

./: .gitignore  CMakeLists.txt  README  README.md  XiaoHuiXiangQi.kdev4
.github/workflows/: cmake-multi-platform.yml
assets/: assets.qrc  xiaohuixiangqi.desktop
src/: board.cpp  board.h  gamestartdialog.cpp  gamestartdialog.h  gamestartdialog.ui  log.cpp  log.h  main.cpp  mainwindow.cpp  mainwindow.h  piece.cpp  piece.h  player.cpp  player.h  record.cpp  record.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
